labour/test/valid/valid_two_start_holds.labour
bouldering_wall "TwoStartsWall": {
  routes [
    bouldering_route "double start": {
      grade: "6B",
      grid_base_point: { x: 10, y: 0 },
      holds ["0001", "0002", "0003"]
    }
  ],
  volumes [
    triangle: {
      pos: { x: 0, y: 0 },
      extrusion: { x: 5, y: 5 },
      depth: 30,
      corners [
        { x: 10, y: 0 },
        { x: -10, y: 0 },
        { x: 0, y: 15 }
      ],
      left_holds [
        hold "0001": {
          pos: { x: 1, y: 2 },
          shape: "3",
          colours [ red ],
          start_hold: 1
        },
        hold "0002": {
          pos: { x: 3, y: 4 },
          shape: "3",
          colours [ red ],
          start_hold: 2
        }
      ],
      right_holds [
        hold "0003": {
          pos: { x: 5, y: 6 },
          shape: "9",
          colours [ red, white ],
          end_hold
        }
      ]
    }
  ]
}
